--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
           <!-- Transparent Logo -->
           <a class="navbar-brand" href="#">
-            <img src="/img/logo.png" alt="Logo" class="navbar-logo" style="height: 80px; opacity: 0.9;">
+            <img src="/logo.png" alt="Logo" class="navbar-logo" style="height: 80px; opacity: 0.9;">
           </a>
           <h1 style="color: rgb(248, 249, 250); font-size: 30px; margin-left: 10px;">TC Lottery</h1>
           
@@ -69,13 +69,13 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="/img/img6.jpg" alt="First slide">
+            <img class="d-block w-100" src="/img6.jpg" alt="First slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="/img/img3.jpg" alt="Second slide">
+            <img class="d-block w-100" src="/img3.jpg" alt="Second slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="/img/img4.jpg" alt="Third slide">
+            <img class="d-block w-100" src="/img4.jpg" alt="Third slide">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
